--- a/jqueryToDoListProject/Assets/css/jquerytodolist.css
+++ b/jqueryToDoListProject/Assets/css/jquerytodolist.css
@@ -1,15 +1,11 @@
-#container{
-    box-shadow: 0 0 3px rgba(0,0,0, 0.1);
-    width: 360px;
-    margin: 100px auto;
-    background-color: #f7f7f7;
-}
-.completed{
-    color: gray;
-    text-decoration: line-through;
+body {
+    font-family: 'Roboto', sans-serif;
+    background: #283048;  /* fallback for old browsers */
+    background: -webkit-linear-gradient(to right, #859398, #283048);  /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to right, #859398, #283048); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 }
 
-h1{
+h1 {
     background-color: #2980b9;
     color: white;
     margin: 0;
@@ -18,35 +14,68 @@ h1{
     font-size: 24px;
     font-weight: normal;
 }
-ul{
+
+ul {
     list-style: none;
     margin:0;
     padding:0;
 }
-body{
-    font-family: 'Roboto', sans-serif;
-    background: #283048;  /* fallback for old browsers */
-    background: -webkit-linear-gradient(to right, #859398, #283048);  /* Chrome 10-25, Safari 5.1-6 */
-    background: linear-gradient(to right, #859398, #283048); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-}
-li{
+
+li {
     background: #fff;
     height: 40px;
     line-height: 40px;
     color: 666;
 }
-li:nth-child(2n){
-    background: #f7f7f7;
-}
-input{
+
+input {
     font-size: 18px;
     background-color: #f7f7f7;
     width: 100%;
     padding: 13px 13px 13px 20px;
     box-sizing: border-box;
     color: #2980b9 ;
+    border: 3px solid rgba(0,0,0,0);
 }
-input:focus{
+
+span {
+    background-color: #e74e3c;
+    height: 40px;
+    margin-right: 20px;
+    text-align: center;
+    color: white;
+    display: inline-block;
+    width: 0;
+    opacity: 0;
+}
+
+input:focus {
     background-color: white;
     border: 3px solid #2980b9;
+}
+
+li:nth-child(2n) {
+    background: #f7f7f7;
+}
+
+li:hover span {
+    width: 40px;
+    transition: .5s;
+    opacity: 1.0;
+}
+
+.fa-plus{
+    float: right;
+}
+
+.completed {
+    color: gray;
+    text-decoration: line-through;
+}
+
+#container {
+    box-shadow: 0 0 3px rgba(0,0,0, 0.1);
+    width: 460px;
+    margin: 100px auto;
+    background-color: #f7f7f7;
 }
